--- a/app/refer.html
+++ b/app/refer.html
@@ -42,7 +42,7 @@
     <script src="https://bootswatch.com/_vendor/popper.js/dist/umd/popper.min.js"></script>
     <script src="https://bootswatch.com/_vendor/bootstrap/dist/js/bootstrap.min.js"></script>
     <script src="https://bootswatch.com/_assets/js/custom.js"></script>
-    <script src="./scripts/main.js"></script>
+    <script src="./scripts/load-refer-data.js"></script>
 </body>
 
 </html>
